--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: "burtons";
-  src: url(../public/Burtons.otf);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
